2006-10-01 Daniel Baumann <daniel@debian.org>

	* Added multiple repositories.
	* Using LIVE_PROXY_* also for bootstraping.

2006-09-27 Daniel Baumann <daniel@debian.org>

	* Changing manpage section.

2006-09-26 Daniel Baumann <daniel@debian.org>

	* Added default flavour hooks.
	* minimal flavour does not install debian-archive-keyring to save space.
	* Adjusted network patch.

2006-09-25 Daniel Baumann <daniel@debian.org>

	* Removed now unused initramfs-tools hack.
	* Simplified xorg check based on distribution rather than version.
	* Added fix from Bas Wijnen <wijnen@debian.org> for space handling in
	  arguments.
	* Fixed package list handling similar to the fix suggested by Alex Owen
	  <r.alex.owen@gmail.com>.

2006-09-08 Marco Amadori <marco.amadori@gmail.com>

	* 13hack.sh: initramfs-tools hack, check added for xorg.

2006-09-15 Daniel Baumann <daniel@debian.org>

	* Added eject to minimal package selection.

2006-09-14 Daniel Baumann <daniel@debian.org>

	* Adjustements for linux 2.6.17 testing propagation.

2006-09-08 Marco Amadori <marco.amadori@gmail.com>

	* 23net.sh: Fixed binary missing directory creation.
	* templates/iso: Moved common files to templates/common.

2006-09-07 Daniel Baumann <daniel@debian.org>

	* Minor cleanups.
	* Fixed dist target.

2006-09-06 Marco Amadori <marco.amadori@gmail.com>

	* 14chroot.sh, main.sh: Added manifest support.
	* 23net.sh: Added 2 variables for basenames to ease readability.
	* main.sh, 02default.sh: Modified Usage() uses.

2006-09-03 Daniel Baumann <daniel@debian.org>

	* Added dist parameter to easily pull images for live.debian.net.
	* Added "--output" to specify the image name prefix.
	* Exclude iso templates for minimal flavour.

2006-09-02 Daniel Baumann <daniel@debian.org>

	* Added experimental as distribution.
	* Added source image generation.
	* Using dpkg instead of dpkg-architecture, removed dpkg-dev dependency.

2006-08-31 Daniel Baumann <daniel@debian.org>
