@@ -1,0 +1,26 @@
+14chroot.sh
+
+        # Add splashy and conditionally a theme
+        if [ ! -z "${LIVE_SPLASHY}" ]
+        then
+                chroots "apt-get install --yes splashy splashy-themes"
+
+                if [ ! -z "${LIVE_SPLASHY_THEME}" ]
+                then
+                        # not already installed ? Then its a new theme to install!
+                        if [ ! -d "${LIVE_CHROOT}"/etc/splashy/themes/"${LIVE_SPLASHY_THEME}" ]
+                        then
+                                if [ -f "${LIVE_SPLASHY_THEME}".tar.gz ]
+                                then
+                                        cp "${LIVE_SPLASHY_THEME}".tar.gz "${LIVE_CHROOT}"/tmp/"${LIVE_SPLASHY_THEME}".tar.gz # this permits simlink to theme
+                                        chroots "splashy_config -i /tmp/${LIVE_SPLASHY_THEME}.tar.gz"
+                                        rm "${LIVE_CHROOT}"/tmp/"${LIVE_SPLASHY_THEME}".tar.gz
+                                        chroots "splashy_config -s ${LIVE_SPLASHY_THEME}"
+                                else
+                                        echo "Specify the local splashy theme without extension, it also must be in the cwd"
+                                fi
+                        else
+                                chroots "splashy_config -s ${LIVE_SPLASHY_THEME}"
+                        fi
+                fi
+        fi
