@@ -1,3 +1,7 @@
+2006-10-16 Daniel Baumann <daniel@debian.org>
+
+	* Readded and slightly changed --clone and --preseed.
+
 2006-10-01 Daniel Baumann <daniel@debian.org>
 
 	* Added multiple repositories.
